# Security

./: .gitignore  CMakeLists.txt  README.md
include/: secure_arithmetic.h  secure_input.h
src/: secure_arithmetic_double.c  secure_arithmetic_float.c  secure_arithmetic_int.c  secure_arithmetic_long.c  secure_arithmetic_long_double.c  secure_arithmetic_long_long.c  secure_arithmetic_schar.c  secure_arithmetic_short.c  secure_arithmetic_uchar.c  secure_arithmetic_uint.c  secure_arithmetic_ulong.c  secure_arithmetic_ulong_long.c  secure_arithmetic_ushort.c  secure_input.c
test/: CMakeLists.txt  main.c
test/cmake/: CompilerWarnings.cmake
